--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 python-dotenv = "*"
 psycopg2-binary = "*"
+django-filter = "*"
+django-redis = "*"
 
 [dev-packages]
 
